plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group   = 'com.konnect'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    /* ──────────────── Spring Boot Starters ──────────────── */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    /* ──────────────── DB / Validator ──────────────── */
    runtimeOnly  'com.mysql:mysql-connector-j'
    implementation 'org.hibernate.validator:hibernate-validator'

    /* ──────────────── Lombok ──────────────── */
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    /* ──────────────── Swagger (SpringDoc) ──────────────── */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    /* ──────────────── JWT ──────────────── */
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.3'

    /* ──────────────── 테스트 ──────────────── */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    /* ──────────────── (선택) MyBatis 사용 시 ──────────────── */
    // implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
    // testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
}

test {
    useJUnitPlatform()
}